--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chat GPT local</title>
+    <title>Chat GPT local 1:03:13 </title>
     <style>
         body{
             font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -90,18 +90,40 @@
             padding: 8px;
             transition: background .3s ease;
             
-            &:hover{
-                background: rgb(0, 104, 173);
-            }
-
             &[disabled]{
                 background: #ccc;
                 opacity: .6;
+                pointer-events: none;
             }
+
+            &:hover{
+                background: rgb(0, 104, 173);
+            }
+        }
+        small {
+            font-size: 10px;
+            color: #555;
+            position: fix ed;
+            bottom: 10px;
+            left: 0;
+            right: 0;
+            margin: auto;
+            width: 400px;
         }
 
     </style>
     <script type="module">
+        import { CreateMLCEngine } from "https://esm.run/@mlc-ai/web-llm"
+
+        const SELECTED_MODEL = 'gemma-2b-it-q4f32_1-MLC'
+
+        const engine = await CreateMLCEngine(
+            SELECTED_MODEL,{
+                initProgessCallback: (info) => {
+                    console.log('initProgessCallback', info);
+                }
+            }
+        )
         const $ = el => document.querySelector(el)
 
         const $form = $('form')
@@ -178,6 +200,8 @@
         <input placeholder="Escribe tu pregunta">
         <button>Enviar</button>
     </form>
+
+    <small>&nbsp;</small>
 
     <template id="message-template">
         <li class="message">
