--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         small {
             font-size: 10px;
             color: #555;
-            position: fix ed;
+            position: fixed;
             bottom: 10px;
             left: 0;
             right: 0;
@@ -210,7 +210,7 @@
                     Tu
                 </span>
                 <p>
-                    Respuesta del Usuario Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi, blanditiis eaque! Dicta, veritatis fugiat. Maiores odit ipsam exercitationem similique tempora quam ea, voluptas est iusto dicta unde asperiores cupiditate blanditiis?
+                    Respuesta del Usuario
             </p>
             </li>
         </ul>
