--- a/index.html
+++ b/index.html
@@ -116,7 +116,8 @@
       }
     </style>
     <script type="module">
-      import { CreateMLCEngine } from "https://esm.run/@mlc-ai/web-llm";
+      // import { CreateWebWorkerMLCEngine } from "https://esm.run/@mlc-ai/web-llm";
+      import { CreateWebWorkerMLCEngine } from "https://cdn.jsdelivr.net/npm/@mlc-ai/web-llm@0.2.46/+esm"
 
       const $ = (el) => document.querySelector(el);
 
@@ -127,10 +128,12 @@
       const $container = $("main");
       const $button = $("button");
       const $info = $("small");
+      const $loading = $("loading")
 
       let messages = [];
+      let end = false
 
-      if(window.Worker){
+      /*if(window.Worker){
         const worker = new Worker('/worker.js')
         worker.postMessage({name: 'hello'})
 
@@ -138,20 +141,27 @@
           console.log("recibido desde worker");
           console.log(e);
         }
-      }
+      }*/
 
-      //const SELECTED_MODEL = "gemma-2b-it-q4f32_1-MLC";
+      const SELECTED_MODEL = "gemma-2b-it-q4f32_1-MLC";
                               //Llama-3-8B-Instruct-q4f32_1-MLC-1k
-      const SELECTED_MODEL = "Llama-3-8B-Instruct-q4f32_1-MLC-1k";
+      // const SELECTED_MODEL = "Llama-3-8B-Instruct-q4f32_1-MLC-1k";
 
-      const engine = await CreateMLCEngine(SELECTED_MODEL, {
-        initProgressCallback: (info) => {
-          console.log("initProgressCallback", info);
-          $info.textContent = `${info.text}%`;
-          if (info.progress === 1) {
-            $button.removeAttribute("disabled");
-          }
-        },
+      const engine = await CreateWebWorkerMLCEngine(
+        new Worker('/worker.js', {type: 'module'}),
+        SELECTED_MODEL, 
+        {
+          initProgressCallback: (info) => {
+            console.log("initProgressCallback", info);
+            $info.textContent = `${info.text}%`;
+            if (info.progress === 1 && !end) {
+              end = true
+              $loading?.parentNode?.removeChild($loading)
+              $button.removeAttribute('disabled')
+              addMessage("¡Hola! Soy un ChatGPT que se ejecuta completamente en tu navegador. ¿En qué puedo ayudarte hoy?", 'bot')
+              $input.focus()
+            }
+          },
       });
 
       $form.addEventListener("submit", async (event) => {
